--- a/src/main/resources/templates/addbook.html
+++ b/src/main/resources/templates/addbook.html
@@ -23,6 +23,11 @@
 			<label for="price">Price</label>
 			<input type="number" th:field="*{price}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
+			<label for="category">Category</label>
+			 <select id="category" th:field="*{category}" class="form-control">
+       			<option th:each="category: ${category}" th:value="${category.categoryid}" th:text="${category.name}"></option>
+    		</select>
+			<div style="clear: both; display: block; height: 10px;"></div>
 			
 			<input type="submit" value="Save"></input>
 		</form>
