--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -3,7 +3,7 @@
 <HTML xmlns:th="http://www.thymeleaf.org">
 
 <head>
-<title>Studentlist</title>
+<title>booklist</title>
 <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
 </head>
 <body>
@@ -17,6 +17,7 @@
 		<td th:text="${book.year}"> </td> 
 		<td th:text="${book.price}"> </td> 
 		<td th:text="${book.isbn}"> </td> 
+		<td th:text="${book.category.name}"> </td> 
 		<td> <a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
 		</tr>
 		</tbody>
